Fix touchpad zoom on touchscreen Windows devices.

TouchPad pinch to zoom on Windows typically works via a WM_MOUSEWHEEL
message with the CONTROL flag in wParam and varying deltas. On touchscreen
Windows devices like Surface, the WM_MOUSEWHEEL event is flagged as a
synthesized message occurring due to a touch.

I think it is safe to allow all WM_MOUSEWHEEL events to be processed by
ignoring the touch flag as they don't appear to get synthesized via
standard touch scrolls.

Changes in this patch are as below:

1. Ignore the touch flag on WM_MOUSEWHEEL and WM_MOUSEHWHEEL messages.
2. Removed dead code in hwnd_message_handler.cc/.h which tried to set
   scroll styles on the window.

BUG=620182

Review-Url: https://codereview.chromium.org/2172843002
Cr-Commit-Position: refs/heads/master@{#407240}

Former-commit-id: b4480ddac51c6c5e195ca5a14f5ef35a27b9865a