ui/views/win/hwnd_message_handler.h
@@ -609,9 +609,6 @@ class VIEWS_EXPORT HWNDMessageHandler :
   // Generates touch-ids for touch-events.
   ui::SequentialIDGenerator id_generator_;
 
-  // Indicates if the window needs the WS_VSCROLL and WS_HSCROLL styles.
-  bool needs_scroll_styles_;
-
   // Set to true if we are in the context of a sizing operation.
   bool in_size_loop_;
 
